further updates added